adds asm-differ, fixes extract_filetable, decomps two functions in seg 0

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tools/kmc-gcc-wrapper"]
 	path = tools/kmc-gcc-wrapper
 	url = https://github.com/Mr-Wiseguy/kmc-gcc-wrapper.git
+[submodule "tools/asm-differ"]
+	path = tools/asm-differ
+	url = https://github.com/simonlindholm/asm-differ.git
